# rag-nextjs

./: .gitignore  MULTI_AGENT_SETUP.md  README.md  deploy-backend.sh  doc-before-all-chats.txt  env.example  package-lock.json  package.json  redeploy-backend.sh  render.yaml  run-backend.sh  run-mcp-server.sh  start-all.sh  stop-all.sh  test-dependencies.sh  test-multi-agent.py  test-upload.sh
backend/: .gitignore  README.md  build.sh  mcp_server.py  migrate_add_session_id.py  migrate_user_schema.py  pyproject.toml  requirements.txt  run.py  run_simple.py  setup-poetry.sh  test_domain_detection.py
backend/app/: main.py  main_simple.py
backend/app/api/routes/: __init__.py  auth.py  chat.py  documents.py  messages.py  query.py
backend/app/core/: auth.py  config.py  database.py
backend/app/models/: __init__.py  document.py
backend/app/services/: ai_service.py  document_processor.py  multi_agent_service.py  pdf_processor.py  vector_service.py
docs/: CHAT_SESSION_NOTES.md  README.md  SETUP_PYTHON_BACKEND.md  USER_AUTHENTICATION_SETUP.md
frontend/: bun.lockb  eslint.config.mjs  next.config.ts  package.json  vercel.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/auth/: route.ts
frontend/src/app/api/chat/: route.ts
frontend/src/app/api/clear-all/: route.ts
frontend/src/app/api/documents/: route.ts
frontend/src/app/api/messages/: route.ts
frontend/src/app/api/query/: route.ts
frontend/src/app/api/query/domains/: route.ts
frontend/src/app/api/upload/: route.ts
frontend/src/app/auth/callback/: page.tsx
frontend/src/components/: AssistantSelector.tsx  AuthWrapper.tsx  ChatHeader.tsx  ChatInput.tsx  ChatMessage.tsx  ChatSidebar.tsx  DomainSelector.tsx  LoadingIndicator.tsx  LoginButton.tsx  SettingsPanel.tsx  UserHeader.tsx  WelcomeMessage.tsx
frontend/src/lib/: api.ts  config.ts  database.ts
frontend/src/types/: chat.ts
scripts/: setup-db.js
src/app/: page.tsx
src/app/api/chat/: route.ts
src/app/api/clear-all/: route.ts
src/app/api/documents/: route.ts
src/app/api/messages/: route.ts
src/lib/: api.ts  config.ts  qdrant.ts
